<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity"
    android:gravity="center">


    <!-- Temperaturas -->
    <TextView
        android:id="@+id/temp_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperatures"
        android:textColor="#808080"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_marginBottom="16dp" />

    <!-- Clima de cada Día -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center">

        <!-- D7 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp"
            android:gravity="center">

            <!-- Fecha -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_7"
                android:textColor="@color/red"
                android:textSize="16sp"
                android:gravity="center" />

            <!-- Temperaturas -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="28°"
                android:textSize="16sp"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="15°"
                android:textSize="16sp"
                android:gravity="center" />

            <!-- Logo -->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/soleado"
                android:contentDescription="Soleado" />
        </LinearLayout>

        <!-- D8 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_8"
                android:textColor="@color/red"
                android:textSize="16sp"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="26°"
                android:textSize="16sp"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="14°"
                android:textSize="16sp"
                android:gravity="center" />

            <!-- Logo -->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/nublado"
                android:contentDescription="Nublado" />
        </LinearLayout>

        <!-- D9 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_9"
                android:textColor="@color/red"
                android:textSize="16sp"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="23°"
                android:textSize="16sp"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3°"
                android:textSize="16sp"
                android:gravity="center" />

            <!-- Logo -->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/soleado"
                android:contentDescription="Soleado" />
        </LinearLayout>

        <!-- D10 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_10"
                android:textColor="@color/red"
                android:textSize="16sp"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="17°"
                android:textSize="16sp"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5°"
                android:textSize="16sp"
                android:gravity="center" />

            <!-- Logo -->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/nublado"
                android:contentDescription="Nublado" />
        </LinearLayout>

        <!-- D11 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_11"
                android:textColor="@color/red"
                android:textSize="16sp"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="19°"
                android:textSize="16sp"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="6°"
                android:textSize="16sp"
                android:gravity="center" />

            <!-- Logo -->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/nublado"
                android:contentDescription="Nublado" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
